--- a/PP8 February/App.xaml
+++ b/PP8 February/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:PP8_February"
-             StartupUri="MainWindow.xaml">
+             StartupUri="Schedule.xaml">
     <Application.Resources>
          
     </Application.Resources>
