--- a/PP8 February/Schedule.xaml
+++ b/PP8 February/Schedule.xaml
@@ -1,11 +1,11 @@
-﻿<Window x:Class="PP8_February.MainWindow"
+﻿<Window x:Class="PP8_February.Schedule"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PP8_February"
         mc:Ignorable="d"
-        Title="Учебное расписание" Height="650" Width="1100" AllowsTransparency="True" Background="Transparent"
+        Title="Schedule" Height="650" Width="1100" AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
 
     <Window.Resources>
@@ -29,19 +29,10 @@
             </Border.Background>
 
         </Border>
-
-        <DataGrid x:Name="data" AutoGenerateColumns="False" Margin="110,44,110,168" VerticalContentAlignment="Center">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Time" Binding="{Binding Time}"/>
-                <DataGridTextColumn Header="Subject" Binding="{Binding Subject}"/>
-                <DataGridTextColumn Header="Class" Binding="{Binding Class}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
+        <DataGrid x:Name="data" FontWeight="Bold" FontSize="15" VerticalContentAlignment="Center" Margin="110,44,110,168" BorderThickness="2"/>
         <Button Content="Выход"  Margin="22,589,0,0"   Click="EXIT_2" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="38" RenderTransformOrigin="0.5,0.5" FontFamily="Britannic Bold"/>
-        <ComboBox Margin="889,587,10,23" x:Name="disciplinecombo"/>
-        <Button Content="Создать расписание"  Margin="566,589,0,0"    HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="38" RenderTransformOrigin="0.5,0.5" FontFamily="Britannic Bold" Click="Button_Click"/>
+        <Button Content="Сгенерировать расписание"  Margin="566,589,0,0"   Click="FillDataGrid1" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="38" RenderTransformOrigin="0.5,0.5" FontFamily="Britannic Bold"/>
         <Button Content="Экспорт"  Margin="387,589,0,0"   Click="export" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="38" RenderTransformOrigin="0.5,0.5" FontFamily="Britannic Bold"/>
-
+        <ComboBox Margin="889,587,10,23" x:Name="group"/>
     </Grid>
 </Window>
