--- a/PP8 February/MainWindow.xaml
+++ b/PP8 February/MainWindow.xaml
@@ -8,15 +8,12 @@
         Title="Учебное расписание" Height="650" Width="1100" AllowsTransparency="True" Background="Transparent"
         WindowStyle="None" ResizeMode="NoResize" WindowStartupLocation="CenterScreen">
 
+
     <Window.Resources>
         <ResourceDictionary Source="InterestButton.xaml" />
     </Window.Resources>
-
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition/>
-        </Grid.RowDefinitions>
-        <Border Name="BorderLog" CornerRadius="10" Visibility="Visible" BorderThickness="0,7,0,0" Padding="1,0,0,0">
+        <Border Name="BorderLog" CornerRadius="10" Visibility="Visible" BorderThickness="0,7,0,0" Padding="1,0,0,0" Margin="0,0,-0.4,0">
             <!--Для закругления краёв-->
             <Border.Background>
                 <LinearGradientBrush>
@@ -27,21 +24,15 @@
                 </LinearGradientBrush>
                 <!--Градиент-->
             </Border.Background>
-
         </Border>
-
-        <DataGrid x:Name="data" AutoGenerateColumns="False" Margin="110,44,110,168" VerticalContentAlignment="Center">
-            <DataGrid.Columns>
-                <DataGridTextColumn Header="Time" Binding="{Binding Time}"/>
-                <DataGridTextColumn Header="Subject" Binding="{Binding Subject}"/>
-                <DataGridTextColumn Header="Class" Binding="{Binding Class}"/>
-            </DataGrid.Columns>
-        </DataGrid>
-
-        <Button Content="Выход"  Margin="22,589,0,0"   Click="EXIT_2" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="38" RenderTransformOrigin="0.5,0.5" FontFamily="Britannic Bold"/>
-        <ComboBox Margin="889,587,10,23" x:Name="disciplinecombo"/>
-        <Button Content="Создать расписание"  Margin="566,589,0,0"    HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="38" RenderTransformOrigin="0.5,0.5" FontFamily="Britannic Bold" Click="Button_Click"/>
-        <Button Content="Экспорт"  Margin="387,589,0,0"   Click="export" HorizontalAlignment="Left"  VerticalAlignment="Top" Width="160" Height="38" RenderTransformOrigin="0.5,0.5" FontFamily="Britannic Bold"/>
-
+        <TextBlock Text="АВТОРИЗАЦИЯ" FontWeight="Bold" FontSize="36" TextAlignment="Center" VerticalAlignment="Center" Margin="253,47,206,562.6" FontFamily="Britannic Bold" Foreground="White"/>
+        <TextBlock  Text="ЛОГИН:" FontWeight="Bold" FontSize="30" TextAlignment="Center" VerticalAlignment="Center" Margin="164,235,805,371.6" Foreground="White" Height="43" FontFamily="Britannic Bold"/>
+        <TextBox Name="LOG" PreviewTextInput="log_PreviewTextInput" Background="White" FontWeight="Bold" FontSize="30" TextAlignment="Center" VerticalContentAlignment="Center" Margin="312,213,230,356.6" BorderBrush="White" BorderThickness="2" Foreground="#557c93" FontFamily="Britannic Bold"/>
+        <TextBlock  Text="ПАРОЛЬ:" FontWeight="Bold" FontSize="30" TextAlignment="Center" VerticalAlignment="Top" Margin="126,327,788,0" Foreground="White" Height="43" FontFamily="Britannic Bold"/>
+        <TextBox Name="PASS" PreviewTextInput="pass_PreviewTextInput" FontWeight="Bold" FontSize="30" TextAlignment="Center" VerticalContentAlignment="Center" Margin="312,308,230,261.6" Background="White" Foreground="#557c93" FontFamily="Britannic Bold"></TextBox>
+        <Button
+                        Content="ВОЙТИ"
+                        Click="Voyti_Click"
+                        Margin="405,484,353,84.6" FontFamily="Britannic Bold" FontSize="30"/>
     </Grid>
 </Window>
